add ..Dockerignore files + exclusion node_modules in tsconfig.json + creation of an docker image 'back_ci'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       /* Type Checking */
       "strict": true,                                      /* Enable all strict type-checking options. */
     },
-    "include": ["src/**/*", "src"]
+    "include": ["src/**/*", "src"],
+    "exclude": ["node_modules"]
 }
   
