--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "body-parser": "^1.20.2",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
+        "docker": "^1.0.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "nodemon": "^3.0.2",
